--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -27,23 +27,23 @@ $g8: #2d3748
 $g9: #1a202c
 
 // // Reds
-// $r1: #fff5f
+$r1: #fff5f5
 
-// $r2: #fed7d
+$r2: #fed7d7
 
-// $r3: #feb2b
+$r3: #feb2b2
 
-// $r4: #fc818
+$r4: #fc8181
 
-// $r5: #f5656
+$r5: #f56565
 
-// $r6: #e53e3
+$r6: #e53e3e
 
-// $r7: #c5303
+$r7: #c53030
 
-// $r8: #9b2c2
+$r8: #9b2c2c
 
-// $r9: #742a2
+$r9: #742a2a
 
 // Oranges
 $o1: #fffaf0
