--- a/css/app.css
+++ b/css/app.css
@@ -186,7 +186,7 @@ body {
 .section2 {
   margin-top: 40px; }
   .section2 .quiz-reading {
-    color: #2b546a;
+    color: #2c7a7b;
     text-align: justify;
     max-width: 80%;
     margin: 10px auto;
@@ -214,7 +214,7 @@ body {
         color: #f687b3; }
     .section2 .container .quiz-container .choose-appropriate {
       padding: 0 40px;
-      color: #cbd5e0;
+      color: #a0aec0;
       margin-top: 10px; }
     .section2 .container .quiz-container .quiz-question {
       font-family: "Question", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -222,7 +222,7 @@ body {
       padding: 0 40px;
       padding-right: 0;
       margin-top: 10px;
-      color: #30c8d6;
+      color: #2c7a7b;
       max-width: 95%;
       word-wrap: break-word;
       font-size: 20px; }
@@ -270,7 +270,7 @@ body {
           color: #a0aec0; }
     .section2 .container .quiz-container .prev-next {
       margin-top: 30px;
-      background: rgba(48, 200, 214, 0.05);
+      background: rgba(48, 200, 214, 0.06);
       padding: 20px 40px; }
       .section2 .container .quiz-container .prev-next button {
         font-family: "Header", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
