--- a/sass/app.sass
+++ b/sass/app.sass
@@ -109,7 +109,7 @@ body
 .section2
   margin-top: 40px
   .quiz-reading
-    color: $pt
+    color: $t7
     text-align: justify
     max-width: 80%
     margin: 10px auto
@@ -138,7 +138,7 @@ body
           color: $pk4
       .choose-appropriate
         padding: 0 40px
-        color: $g4
+        color: $g5
         margin-top: 10px
       .quiz-question
         font-family: 'Question', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
@@ -146,7 +146,7 @@ body
         padding: 0 40px
         padding-right: 0
         margin-top: 10px
-        color: $pgb 
+        color: $t7 
         max-width: 95%
         word-wrap: break-word
         font-size: 20px
@@ -199,7 +199,7 @@ body
       .prev-next
         margin-top: 30px
         // background: #f9f9f9
-        background: rgba(48, 200, 214, .05)
+        background: rgba(48, 200, 214, .06)
         padding: 20px 40px
         button
           // background: $pgb
