--- a/sass/app.sass
+++ b/sass/app.sass
@@ -241,7 +241,7 @@ body
       
       
       .thank-you
-        color: $pk3
+        color: $t6
       .score-paragraph
         margin-top: 30px
         color: $g7
@@ -251,7 +251,7 @@ body
           color: $pk3
       .reset
         margin-top: 25px
-        background: $pgb
+        background: $t6
         color: $w
         padding: 7px 12px
         border-radius: 5px
@@ -263,13 +263,13 @@ body
           background: rgba(48, 200, 214,.7)
       .correction-title
         margin-top: 20px
-        color: $pk3
+        color: $y4
       .correction-div
         padding: 0 5%
         text-align: left
         margin-top: 20px
         .correction-header
-          color: rgba(48, 200, 214,.7)
+          color: $t7
           margin-bottom: 5px
         .correction-answer
           color: $g4
